# Chicken-Disease-Classification

./: .dockerignore  Dockerfile  README.md  compile_packages.bat  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  scores.json  template.py
.github/workflows/: main.yaml
app/: main.py
config/: config.yaml
notebooks/: Stage1_data_ingestion.ipynb  Stage2_prepare_base_model.ipynb  Stage3_prepare_callbacks.ipynb  Stage4_training.ipynb  Stage5_evaluation.ipynb  Stage_2_prepare_base_model.ipynb  research.ipynb
src/chicken_disease_classification/: __init__.py
src/chicken_disease_classification/components/: data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/chicken_disease_classification/config/: config_manager.py
src/chicken_disease_classification/entity/: entity_config.py
src/chicken_disease_classification/exception/: exception.py
src/chicken_disease_classification/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/chicken_disease_classification/utils/: common.py  dataloader.py  engine.py
