[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chicken_disease_classification"
version = "0.1.0"
description = "ML pipeline for classifying chicken disease"
authors = [{ name = "MKhai Truong" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]